# prost

./: CMakeLists.txt  Doxyfile  README.md  todo.txt
bind_matlab/: block_sparse.m  block_zero.m  eval_prox_mex.cpp  factory_mex.cpp  factory_mex.hpp  linop_data_graph_prec.m  linop_data_prec.m  linop_diags.m  linop_gradient2d.m  linop_gradient3d.m  linop_identity.m  linop_sparse.m  linop_zero.m  mex_eval_linop.cpp  mex_eval_prox.cpp  mex_factory.cpp  mex_factory.hpp  mex_pdsolver.cpp  pdsolver_backend_pdhg.m  pdsolver_build.m  pdsolver_mex.cpp  pdsolver_options.m  pdsolver_opts.m  pdsolver_problem.m  prox_1d.m  prox_create.cpp  prox_create.h  prox_epi_conjquadr.m  prox_epi_conjquadr_scaled.m  prox_epi_max_lin.m  prox_epi_parabola.m  prox_epi_piecew_lin.m  prox_epi_piecew_lin_scaled.m  prox_halfspace.m  prox_hyperplane.m  prox_moreau.m  prox_norm2.m  prox_plus_linterm.m  prox_simplex.m  prox_zero.m
cmake/: CudaVersion.cmake  CustomSources.cmake.example
doc/: howto.txt  macros.tex  notes.tex  todo.txt
docs/: CMakeLists.txt
examples/: ex_fit_stereo_en.m  ex_lifted_tv.m  ex_lifted_tv_callback.m  ex_linop.m  ex_prox_epi.m  ex_rof.m  ex_rof_callback.m  grad_forw_2d.m  linop_fit_en.m  patches_from_im.m  spmat_data_graph_prec.m  spmat_data_graph_prec_2.m  spmat_data_prec.m  spmat_data_prec_2.m  spmat_gradient3d.m
include/: config.hpp  const_mem.hpp  exception.hpp  factory.hpp  pdsolver_exception.hpp  preconditioner.hpp  prox.hpp  (+10 more)
matlab/: CMakeLists.txt
matlab/+prost/: dual_variable.m  eval_linop.m  eval_prox.m  get_all_variables.m  init.m  list_gpus.m  min.m  min_max.m  min_max_problem.m  min_problem.m  options.m  pdsolver_build.m  pdsolver_options.m  pdsolver_problem.m  primal_variable.m  problem.m  prox_simplex.m  release.m  run_all_tests.m  set_constraint.m  set_dual_pair.m  set_gpu.m  solve.m  sub_variable.m  variable.m
matlab/+prost/+backend/: admm.m  pdhg.m
matlab/+prost/+block/: dataterm_sublabel.m  dense.m  dense_kron_id.m  diags.m  gradient2d.m  gradient3d.m  id_kron_dense.m  id_kron_sparse.m  identity.m  sparse.m  sparse_kron_id.m  zero.m
matlab/+prost/+function/: conjugate.m  ind_range.m  permute.m  sum_1d.m  sum_eigen_2x2.m  sum_eigen_3x3.m  sum_eigen_nxn.m  sum_ind_comass_ball.m  sum_ind_epi_polyhedral.m  sum_ind_epi_quad.m  sum_ind_halfspace.m  sum_ind_psd_cone_3x3.m  sum_ind_simplex.m  sum_ind_soc.m  sum_ind_sum.m  sum_ind_sum2.m  sum_mass_norm.m  sum_norm2.m  sum_singular_nx2.m  transform.m  zero.m
matlab/+prost/+linop/: dense.m  diags.m  gradient2d.m  gradient3d.m  identity.m  sparse.m  sparse_kron_id.m
matlab/+prost/+prox/: moreau.m  sum_1d.m  sum_epi_quadratic_fun.m  sum_ind_epi_conjquad.m  sum_ind_epi_polyhedral.m  sum_ind_epi_polyhedral_1d.m  sum_ind_epi_quad.m  sum_ind_epi_quadratic_fun.m  sum_ind_simplex.m  sum_norm2.m  sum_singular_3x2.m  sum_singular_nx2.m  transform.m  zero.m
matlab/+prost/+test/: test_linop_dense.m  test_linop_dense_kron_id.m  test_linop_diags.m  test_linop_gradient2d.m  test_linop_gradient3d.m  test_linop_id_kron_dense.m  test_linop_id_kron_sparse.m  test_linop_sparse.m  test_linop_sparse_kron_id.m  test_linop_sparse_zero.m  test_proj_epi_quadratic_fun.m  test_prox_conj_trans.m  test_prox_conjugate.m  test_prox_ind_range.m  test_prox_norm2.m  test_prox_permute.m  test_prox_simplex.m  test_prox_sum_eigen_2x2.m  test_prox_sum_eigen_3x3.m  test_prox_sum_eigen_nxn.m  test_prox_sum_ind_epi_polyhedral.m  test_prox_sum_ind_epi_quad.m  test_prox_sum_ind_epi_quadratic_fun.m  test_prox_sum_ind_psd_cone.m  test_prox_sum_ind_simplex.m  test_prox_sum_ind_sum.m  test_prox_sum_norm2.m  test_prox_sum_singular_3x2.m  test_prox_sum_singular_nx2.m  test_prox_transform.m
matlab/+prost/+test/private/: spmat_gradient3d.m
matlab/+prost/mex/: factory.hpp  prost.cpp
matlab/+prost/private/: add_prox.m  config.hpp  custom.cpp  factory.cpp  factory.hpp  prost.cpp  zero.m
matlab/examples/: example_deblurring.m  example_multilabel_callback.m  example_multilabel_fast.m  example_multilabel_tight.m  example_nonconvex_rof.m  example_polyhedral.m  example_rof.m  example_rof_dual.m  example_rof_energy_cb.m  example_rof_pdgap.m  example_rof_primal.m  example_rof_primaldual.m  example_tv_inpaint.m  example_tvl1.m
src/: CMakeLists.txt  common.cu  config.h  preconditioner.cu  problem.cu  prox_1d.cu  prox_epi_conjquadr.cu  prox_moreau.cu  prox_norm2.cu  prox_simplex.cu  prox_zero.cu  solver.cpp  solver.cu  solver_backend_pdhg.cu  util.cu
src/backend/: backend_admm.cu  backend_pdhg.cu
src/bind_matlab/: pdsolver.mexmaci64  pdsolver_mex.cpp  prox_sum_1d.m  setup.m
src/linop/: block.cpp  block.cu  block_dataterm_sublabel.cu  block_dense.cu  block_dense_kron_id.cu  block_diags.cu  block_gradient2d.cu  block_gradient3d.cu  block_id_kron_dense.cu  block_id_kron_sparse.cu  block_sparse.cpp  block_sparse.cu  block_sparse_kron_id.cu  block_zero.cpp  block_zero.cu  dual_linearoperator.cu  lin_operator.cu  linearoperator.cu  linop.cpp  linop_data_graph_prec.cu  linop_data_prec.cu  linop_diags.cu  linop_gradient.cu  linop_identity.cu  linop_sparse.cpp  linop_zero.cpp
src/pdsolver/: pdsolver.cpp  pdsolver.h
src/pdsolver/backend/: backend.h  be_pdhg.cu  be_pdhg.h
src/pdsolver/prox/: prox.h  prox_fun_1d.cuh  prox_fun_1d.h  prox_moreau.cu  prox_moreau.h  prox_sum_1d.cu  prox_sum_1d.h  prox_sum_norm2.cu  prox_sum_norm2.h
src/prox/: proj_epi_quadratic_fun.cu  prox.cpp  prox.cu  prox_1d.cu  prox_elem_operation.cu  prox_epi_conjquadr.cu  prox_epi_conjquadr_scaled.cu  prox_epi_huber.cu  prox_epi_max_lin.cu  prox_epi_parabola.cu  prox_epi_piecew_lin.cu  prox_halfspace.cu  prox_hyperplane.cu  prox_ind_epi_polyhedral.cu  prox_ind_epi_polyhedral_1d.cu  prox_ind_epi_quad.cu  prox_ind_epi_quadratic_fun.cu  prox_ind_halfspace.cu  prox_ind_range.cu  prox_ind_soc.cu  prox_ind_sum.cu  prox_moreau.cu  prox_norm2.cu  prox_permute.cu  prox_plus_linterm.cu  prox_separable_sum.cu  prox_simplex.cu  prox_transform.cu  prox_zero.cu
src/solver/: preconditioner.cu  problem.cu  solver.cpp  solver_backend_pdhg.cu  solver_backend_pdhgtiny.cu
src/utils/: cuwrapper.h  sparse_matrix.h
(+148 files in other folders)
